...
        }
    }

    @ViewBuilder private var ResetButton: some View {
        let isEnabled = pomoTimer.isPaused || pomoTimer.getStatus() == .end
        Image(systemName: withFill("arrow.counterclockwise.circle"))
            .accessibilityIdentifier("resetButton")
            .foregroundStyle(pomoTimer.isPaused ? .orange : Color(hex: 0x333333))
            .overlay(softLightOverlay)
            .font(.system(size: 40))
            .onTapGesture {
                guard isEnabled else { return }
                resetHaptic()
...
            .disabled(!isEnabled)
    }

    @ViewBuilder private var StartStopButton: some View {
        let isEnabled = pomoTimer.getStatus() != .end
        Image(systemName: pomoTimer.isPaused ? withFill("play.circle") : withFill("pause.circle"))
            .accessibilityIdentifier("playPauseButton")
            .foregroundStyle(Color.accentColor)
            .overlay(softLightOverlay)
            .font(.system(size: 40))
            .onTapGesture {
                guard isEnabled else { return }
                pomoTimer.isPaused ? startHaptic() : stopHaptic()
...
