...
        }
    }

    @ViewBuilder private var taskInput: some View {
        TextField("Add task", text: $taskFromAdder.text)
            .font(.system(.callout, design: .monospaced, weight: .medium))
            .accessibilityIdentifier("AddTask")
            .focused($taskFocus)
            .offset(x: 25)
            .rotationEffect(taskFromAdder.isDragging ? .degrees(-45) : .degrees(0), anchor: .leading)
            .shadow(radius: taskFromAdder.isDragging ? 5 : 0)
            .animation(.easeInOut, value: taskFromAdder.isDragging)
            .offset(x: 140)
...
                Color.clear
                    .contentShape(Rectangle())
                    .frame(width: width + extraSize.width, height: geometry.size.height + extraSize.height)
            }
            .position(x: geometry.size.width/2, y: geometry.size.height/2)
            .offset(x: -extraSize.width/2)
            .accessibilityIdentifier("DraggableTask")
        }
    }

    @ViewBuilder private var dragHint: some View {
        let gradient = LinearGradient(stops: [.init(color: .primary, location: 0.0),
                                              .init(color: .primary.opacity(0.3), location: 1.0)],
...
