...
                    resetHaptic()
                    withAnimation { taskNotes.tasksOnBar[index] = "" }
                    taskNotes.saveToUserDefaults()
                } label: {
                    Text("Remove from progress bar")
                }
                .accessibilityIdentifier("DeleteTask")
            } message: {
                Text("Task: \(text)")
            }
        
            .opacity(text != "" ? 1.0 : 0.0)
            .animation(.easeInOut, value: taskNotes.tasksOnBar)
...
