...
                }
                .padding(.bottom, 8)
                
                ZStack {
                    Group {
                        ColorBars(isMask: false)
                            .accessibilityIdentifier("DraggableProgressBar")
                            .mask { RoundedRectangle(cornerRadius: 7) }
                        ProgressIndicator(at: context.date)
                            .opacity(shouldShowProgressIndicator(at: context.date) ? 1.0 : 0.0)
                            .allowsHitTesting(false)
                            
                    }
...
